# generic_torque_actuation

./: CMakeLists.txt  LICENSE  README.md
MATLAB/: visualize_data.m
data/simple_benchmark/: actuator_data.csv  configuration_file.yaml
data/simple_benchmark/dual_motor/double_sine/1/: configuration_file.yaml
data/simple_benchmark/dual_motor/double_sine/2/: configuration_file.yaml
data/simple_benchmark/dual_motor/double_sine/3/: configuration_file.yaml
data/simple_benchmark/dual_motor/double_sine/4/: configuration_file.yaml
data/simple_benchmark/dual_motor/double_sine_half_power/: configuration_file.yaml
data/simple_benchmark/dual_motor/double_sine_half_power/1/: Current.fig  configuration_file.yaml
data/simple_benchmark/dual_motor/robot_board/double_sine/: configuration_file.yaml
data/simple_benchmark/dual_motor/robot_board/double_sine_half_power/: configuration_file.yaml
data/simple_benchmark/motor_bench/clockwise/: Current.fig  actuator_data.csv  configuration_file.yaml
data/simple_benchmark/motor_bench/counterclockwise/: Current.fig  actuator_data.csv  configuration_file.yaml
data/simple_benchmark/robot_motor1/clockwise/: Current.fig  actuator_data.csv  configuration_file.yaml
data/simple_benchmark/robot_motor1/counterclockwise/: Current.fig  actuator_data.csv  configuration_file.yaml
data/simple_benchmark/robot_motor2/clockwise/: Current.fig  actuator_data.csv  configuration_file.yaml
data/simple_benchmark/robot_motor2/counterclockwise/: Current.fig  actuator_data.csv  configuration_file.yaml
scripts/: initialize_can_bus.sh
src/: CMakeLists.txt  custom_law.cpp
src/generic_torque_actuation/: actuators_interface.cpp  generic_torque_control.cpp
src/include/generic_torque_actuation/: actuators_interface.hpp  generic_torque_control.hpp
(+15 files in other folders)
